Add initial Galaxy Training Network (GTN) importer (#8)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -84,6 +84,7 @@ typing = [
     "click-types",
     "types-requests",
     "types-tabulate",
+    "types-python-dateutil",
 ]
 docs-lint = [
     { include-group = "docs" },
